# netops-automation

./: README.md  pyproject.toml
src/netops/: connections.py
src/netops/compliance/: auditor.py  remediate.py
